--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,10 @@
       content="Web site created using create-react-app"
       
     />
-    <link rel="apple-touch-icon" sizes="180x180" href="src/assets/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="src/assets/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="src/assets/favicon-16x16.png">
-    <link rel="icon" type="image/x-icon" href="src\assets\favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <!-- <link rel="icon" type="image/x-icon" href="src\assets\favicon.ico"> -->
     <link rel="mask-icon" href="src/assets/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
