--- a/public/index.html
+++ b/public/index.html
@@ -4,15 +4,35 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
-      name="description"
+      name="Welcome to my website. Here, you'll find my projects, every position I've held, and all the services I offer to help you achieve your goals."
       content=""/>
     <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="mask-icon" href="./safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+<!-- Primary Meta Tags -->
+<title>Junior Torres </title>
+<meta name="title" content="Junior Torres " />
+<meta name="description" content="Welcome to my website. Here, you'll find my projects, every position I've held, and all the services I offer to help you achieve your goals." />
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://juniortorresmtj.github.io/JuniorTorres_website_portfolio/" />
+<meta property="og:title" content="Junior Torres " />
+<meta property="og:description" content="Welcome to my website. Here, you'll find my projects, every position I've held, and all the services I offer to help you achieve your goals." />
+<meta property="og:image" content="./card.png" />
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://juniortorresmtj.github.io/JuniorTorres_website_portfolio/" />
+<meta property="twitter:title" content="Junior Torres " />
+<meta property="twitter:description" content="Welcome to my website. Here, you'll find my projects, every position I've held, and all the services I offer to help you achieve your goals." />
+<meta property="twitter:image" content="./card.png" />
+
+
     <!-- google fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Aldrich&family=Orbitron:wght@400;500;600;700;800;900&family=Rajdhani:wght@300;400;500;600;700&display=swap"
