--- a/public/index.html
+++ b/public/index.html
@@ -23,14 +23,14 @@
 <meta property="og:url" content="https://juniortorresmtj.github.io/JuniorTorres_website_portfolio/" />
 <meta property="og:title" content="Junior Torres " />
 <meta property="og:description" content="Welcome to my website. Here, you'll find my projects, every position I've held, and all the services I offer to help you achieve your goals." />
-<meta property="og:image" content="./card.png" />
+<meta property="og:image" itemprop="image" content="./card.png" />
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content="https://juniortorresmtj.github.io/JuniorTorres_website_portfolio/" />
 <meta property="twitter:title" content="Junior Torres " />
 <meta property="twitter:description" content="Welcome to my website. Here, you'll find my projects, every position I've held, and all the services I offer to help you achieve your goals." />
-<meta property="twitter:image" content="./card.png" />
+<meta property="twitter:image" itemprop="image" content="./card.png" />
 
 
     <!-- google fonts -->
